<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button23"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:text="@string/btn_borrar"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button24"
        android:layout_width="82dp"
        android:layout_height="39dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btn_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button22"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:text="@string/btn_c"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button20"
        android:layout_width="83dp"
        android:layout_height="39dp"
        android:text="@string/btn_ce"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button18"
        android:layout_width="83dp"
        android:layout_height="39dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="279dp"
        android:text="@string/btn_1_entre_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button17"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="279dp"
        android:text="@string/btn_x_cuadrada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button16"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="279dp"
        android:text="@string/btn_raiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button13"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="318dp"
        android:text="@string/btn_m_asterisco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="318dp"
        android:text="@string/btn_mc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="318dp"
        android:text="@string/btn_m_menos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="318dp"
        android:text="@string/btn_mr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="318dp"
        android:text="@string/btn_m_mas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="318dp"
        android:text="@string/btn_ms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="74dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="10dp"
        android:gravity="center|right"
        android:text="@string/txt_lbl_numero"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/button14"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_lineas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="84dp"
        android:layout_height="28dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="163dp"
        android:gravity="center"
        android:text="@string/txt_estandar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="83dp"
        android:layout_height="39dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="1dp"
        android:text="@string/btn_porcentaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button25"
        android:layout_width="85dp"
        android:layout_height="41dp"
        android:text="@string/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/button26"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button26"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:text="@string/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button27"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_marginEnd="2dp"
        android:text="@string/btn_9"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button28"
        android:layout_width="81dp"
        android:layout_height="41dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btn_multiplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button29"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:text="@string/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/button30"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/button30"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_marginEnd="1dp"
        android:text="@string/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button26" />

    <Button
        android:id="@+id/button31"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginEnd="1dp"
        android:text="@string/btn_6"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button32"
        android:layout_width="81dp"
        android:layout_height="38dp"
        android:layout_marginEnd="41dp"
        android:text="@string/btn_menos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button33"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:text="@string/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/button34"
        app:layout_constraintTop_toBottomOf="@+id/button29" />

    <Button
        android:id="@+id/button34"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:text="@string/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/button35"
        app:layout_constraintTop_toBottomOf="@+id/button30" />

    <Button
        android:id="@+id/button35"
        android:layout_width="91dp"
        android:layout_height="38dp"
        android:layout_marginEnd="1dp"
        android:text="@string/btn_3"
        app:layout_constraintEnd_toStartOf="@+id/button36"
        app:layout_constraintTop_toBottomOf="@+id/button31" />

    <Button
        android:id="@+id/button36"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:layout_marginEnd="39dp"
        android:text="@string/btn_mas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button37"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:text="@string/btn_mas_menos"
        app:layout_constraintEnd_toStartOf="@+id/button38"
        app:layout_constraintTop_toBottomOf="@+id/button33" />

    <Button
        android:id="@+id/button38"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:text="@string/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/button39"
        app:layout_constraintTop_toBottomOf="@+id/button34" />

    <Button
        android:id="@+id/button39"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:layout_marginEnd="2dp"
        android:text="@string/btn_punto"
        app:layout_constraintEnd_toStartOf="@+id/button40"
        app:layout_constraintTop_toBottomOf="@+id/button35" />

    <Button
        android:id="@+id/button40"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btn_igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button36" />

</android.support.constraint.ConstraintLayout>